@@ -1181,6 +1181,7 @@ gtk_icon_theme_lookup_icon (GtkIconTheme       *icon_theme,
 
   priv = icon_theme->priv;
 
+  g_print ("gtk_icon_theme_lookup_icon %s\n", icon_name);
   if (flags & GTK_ICON_LOOKUP_NO_SVG)
     allow_svg = FALSE;
   else if (flags & GTK_ICON_LOOKUP_FORCE_SVG)
@@ -1270,7 +1271,7 @@ gtk_icon_theme_lookup_icon (GtkIconTheme       *icon_theme,
 			   "was not found either, perhaps you need to install it.\n"
 			   "You can get a copy from:\n"
 			   "\t%s"),
-			 icon_name, DEFAULT_THEME_NAME, "http://freedesktop.org/Software/icon-theme/releases");
+			 icon_name, DEFAULT_THEME_NAME, "http://icon-theme.freedesktop.org/releases");
 	    }
 	}
     }
@@ -1775,6 +1776,8 @@ theme_dir_get_icon_suffix (IconThemeDir *dir,
   else
       suffix = GPOINTER_TO_UINT (g_hash_table_lookup (dir->icons, icon_name));
 
+  g_print ("get_icon_suffix%s %d\n", dir->cache ? " (cached)" : "", suffix);
+
   return suffix;
 }
 
@@ -1815,6 +1818,7 @@ theme_lookup_icon (IconTheme          *theme,
     {
       dir = l->data;
 
+      g_print ("theme_lookup_icon dir %s\n", dir->dir);
       suffix = theme_dir_get_icon_suffix (dir, icon_name, NULL);
       if (best_suffix (suffix, allow_svg) != ICON_SUFFIX_NONE)
 	{
